--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ iframe {
     margin: 0 auto;
     border-width: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+}
+
+iframe:hover {
+    transform: scale(1.003);
+    transition: 0.2s ease-in-out;
 }
 
 #show-case {
