Added a shadow effect to the nav bar at the top

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ nav {
     justify-content: space-evenly;
     padding: 20px;
     text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 4);
 }
 
 nav a {
